# repo-map

./: .dockerignore  .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db
.devcontainer/: Dockerfile  devcontainer.json  init.sh  post-start.sh
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  create-agent.agent.md  unit-test.agent.md
.github/workflows/: build-image.yaml  ci.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/developer/: copilot_custom_agents.md  git_town_cheat_sheet.md  integration_testing.md  unit_testing.md
repo_map/: __init__.py  clipboard.py  logging_config.py  mapper.py  settings.py
repo_map/cli/: app.py
repo_map/core/: __init__.py  cost.py  flight_plan.py  renderer.py  repomap.py  special.py  tags.py  verbosity.py
repo_map/core/queries/bash/: interface.scm  structure.scm  tags.scm
repo_map/core/queries/go/: interface.scm  structure.scm  tags.scm
repo_map/core/queries/html/: interface.scm  structure.scm  tags.scm
repo_map/core/queries/java/: interface.scm  structure.scm  tags.scm
repo_map/core/queries/markdown/: structure.scm  tags.scm
repo_map/core/queries/proto/: interface.scm  structure.scm  tags.scm
repo_map/core/queries/python/: interface.scm  structure.scm
repo_map/core/queries/tree-sitter-language-pack/: markdown-interface.scm
repo_map/core/queries/typescript/: interface.scm  structure.scm  tags.scm
repo_map/navigator/: __init__.py  agent.py  plugin.py  pricing.py  prompts.py  runner.py  state.py  tools.py
repo_map/navigator/templates/: bootstrap_prompt.jinja2  navigator_prompt.jinja2
scripts/: check_quality.sh  presubmit.sh
specs/001-context-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-context-engine/checklists/: requirements.md
specs/001-context-engine/contracts/: cli-interface.md  flight-plan-schema.md
specs/001-context-engine/research/: extraction_example.py  tree-sitter-queries.md  yaml-pydantic-validation.py
specs/001-context-engine/research/queries/: markdown-level2.scm  markdown-level3.scm  python-level2.scm  python-level3.scm
specs/002-navigator-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-navigator-agent/checklists/: requirements.md
specs/002-navigator-agent/contracts/: cli-navigate-interface.md  navigator-state-schema.md  turn-report-schema.md
tests/: adk_helpers.py
tests/fixtures/flight-plans/: basic.yaml  complex.yaml  minimal.yaml
tests/fixtures/sample-repo/: README.md
tests/fixtures/sample-repo/docs/: api.md  architecture.md
tests/fixtures/sample-repo/src/: __init__.py
tests/fixtures/sample-repo/src/core/: __init__.py  auth.py  data.py
tests/fixtures/sample-repo/src/utils/: __init__.py  helpers.py
tests/fixtures/sample-repo/tests/: __init__.py  test_auth.py
tests/integration/: helpers.py  test_context_engine.py  test_navigator.py
tests/unit/: test_cli.py  test_cost.py  test_flight_plan.py  test_markdown_sections.py  test_markdown_tags.py  test_navigator_agent.py  test_navigator_plugin.py  test_navigator_pricing.py  test_navigator_prompts.py  test_navigator_runner.py  test_navigator_state.py  test_navigator_tools.py  test_renderer.py  test_tags_verbosity.py
